<resources>
    <string name="app_name">Samantha</string>
    <string name="today_schedule">Today</string>
    <string name="month_schedule">Month</string>
    <string name="clients">Clients</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="Sunday">Sun</string>


    <string name="free_time">Free time</string>

    <string name="add_client">Add client</string>
    <string name="add_new_client">Add new client</string>
    <string name="edit">Edit</string>
    <string name="client_info">Client info</string>
    <string name="edit_client_info">Edit client info</string>
    <string name="history">History</string>
    <string name="client_name">Client name</string>
    <string name="phone_number">Phone number</string>
    <string name="client_info_updated">Client info updated</string>
    <string name="client_added_to_list">Client added to list</string>
    <string name="client_removed_from_list">Client removed from list</string>

    <string name="annual_revenue">ANNUAL REVENUE</string>
    <string name="working_days">Working days</string>
    <string name="revenue">Revenue</string>

    <string name="edit_profile">Edit profile</string>
    <string name="services">Services</string>
    <string name="servicesUP">SERVICES</string>

    <string name="create_profile">Create profile</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_region">Select region</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="currency">Currency</string>
    <string name="create_schedule">Create schedule</string>
    <string name="add_service">Add service</string>
    <string name="price">Price</string>
    <string name="time_in_minutes">Time (in minutes)</string>
    <string name="service_updated">Service updated</string>
    <string name="service_added">Service added</string>
    <string name="edit_service">Edit service</string>
    <string name="working_time">WORKING TIME</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="break_time">BREAK</string>
    <string name="sector">SECTOR</string>
    <string name="schedule_updated">Schedule updated</string>

    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="choose_services">Choose services</string>
    <string name="services_total_cost">Total cost: %d %s</string>
    <string name="services_total_time">Time to complete: %d</string>
    <string name="edit_profile_info">Edit profile info</string>
    <string name="edit_region">Edit region</string>
    <string name="edit_services">Edit services</string>
    <string name="contact_info">Contact info:</string>
    <string name="book_client">Book client</string>

</resources>