<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:title="@string/today_schedule"
        android:icon="@drawable/outline_view_list_black_24"/>

    <item
        android:id="@+id/navigation_month"
        android:title="@string/month_schedule"
        android:icon="@drawable/outline_event_black_24"/>

    <item
        android:id="@+id/navigation_clients"
        android:title="@string/clients"
        android:icon="@drawable/outline_people_black_24"/>

    <item
        android:id="@+id/navigation_statistics"
        android:title="@string/statistics"
        android:icon="@drawable/outline_analytics_black_24"/>

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/profile"
        android:icon="@drawable/outline_account_box_black_24"/>

</menu>