<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.create_profile.services.service_edit.ServiceEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/service_edit_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/three_quarters_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/outline_close_black_24"/>

        <TextView
            android:id="@+id/service_edit_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/service_edit_close_button"
            app:layout_constraintEnd_toStartOf="@id/service_edit_done_button"
            tools:text="@string/add_service"/>

        <ImageView
            android:id="@+id/service_edit_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/three_quarters_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/outline_done_black_24"/>

        <TextView
            android:id="@+id/service_edit_name_text"
            style="@style/edit_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_title"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/double_padding"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/service_edit_name"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_name_text"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginTop="@dimen/half_padding"/>

        <TextView
            android:id="@+id/service_edit_price_text"
            style="@style/edit_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_name"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/one_and_a_half_padding"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/service_edit_price"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_price_text"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginTop="@dimen/half_padding"/>

        <TextView
            android:id="@+id/service_edit_time_text"
            style="@style/edit_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_price"
            android:layout_marginTop="@dimen/one_and_a_half_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@string/time_in_minutes"/>

        <EditText
            android:id="@+id/service_edit_time"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_edit_time_text"
            android:layout_marginTop="@dimen/half_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
