<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding">

        <TextView
            android:id="@+id/monthly_statistics_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/default_padding"
            tools:text="March"/>

        <TextView
            android:id="@+id/monthly_statistics_working_days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_month"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/working_days"/>

        <TextView
            android:id="@+id/monthly_statistics_working_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_month"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            tools:text="24"/>

        <TextView
            android:id="@+id/monthly_statistics_clients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_working_days"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/quarter_padding"
            android:text="@string/clients"/>

        <TextView
            android:id="@+id/monthly_statistics_clients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_working_days"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginTop="@dimen/quarter_padding"
            tools:text="240"/>

        <TextView
            android:id="@+id/monthly_statistics_revenue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_clients"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/quarter_padding"
            android:text="@string/revenue"/>

        <TextView
            android:id="@+id/monthly_statistics_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/monthly_statistics_clients"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_marginTop="@dimen/quarter_padding"
            tools:text="240 000,00 р."/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>