<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.create_profile.edit_profile_info.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_profile_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/three_quarters_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/outline_close_black_24"/>

            <TextView
                android:id="@+id/edit_profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/create_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_profile_close_button"
                app:layout_constraintEnd_toStartOf="@id/edit_profile_next_button"/>

            <ImageView
                android:id="@+id/edit_profile_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/three_quarters_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/outline_arrow_forward_black_24"/>

            <ImageView
                android:id="@+id/edit_profile_avatar"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1"
                android:background="@drawable/circle_bg"
                android:outlineProvider="background"
                android:src="@drawable/samantha"
                tools:src="@drawable/samantha"/>

            <TextView
                android:id="@+id/edit_profile_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_avatar"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/double_padding"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/edit_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_name_text"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:background="@drawable/edit_text_field"/>

            <TextView
                android:id="@+id/edit_profile_profession_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_name"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/one_and_a_half_padding"
                android:text="@string/profession"/>

            <EditText
                android:id="@+id/edit_profile__profession"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_profession_text"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:background="@drawable/edit_text_field"/>

            <TextView
                android:id="@+id/edit_profile_phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile__profession"
                android:layout_marginTop="@dimen/one_and_a_half_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/phone_number"/>

            <EditText
                android:id="@+id/edit_profile__phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_phone_number_text"
                android:layout_marginTop="@dimen/half_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:background="@drawable/edit_text_field"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
