<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.create_profile.select_region.SelectRegionFragment">

    <data>
        <variable
            name="master"
            type="com.mnemo.samantha.domain.entities.Master" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/select_region_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/three_quarters_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/outline_arrow_back_black_24"/>

            <TextView
                android:id="@+id/select_region_title"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/select_region"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/select_region_back_button"
                app:layout_constraintEnd_toStartOf="@id/select_region_next_button"/>

            <ImageView
                android:id="@+id/select_region_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/three_quarters_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/outline_arrow_forward_black_24"/>

            <ImageView
                android:id="@+id/select_region_image"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="36dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/select_region_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:loadImageDrawable="@{@drawable/earth}"/>

            <TextView
                android:id="@+id/select_region_country_text"
                style="@style/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_image"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/double_padding"
                android:text="@string/country"/>

            <EditText
                android:id="@+id/select_region_country"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_country_text"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:text="@{master.country}"/>

            <TextView
                android:id="@+id/select_region_city_text"
                style="@style/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_country"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/city"/>

            <EditText
                android:id="@+id/select_region_city"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_city_text"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:text="@{master.city}"/>

            <TextView
                android:id="@+id/select_region_currency_text"
                style="@style/edit_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_city"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/currency"/>

            <EditText
                android:id="@+id/select_region_currency"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_region_currency_text"
                android:layout_marginTop="@dimen/half_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:text="@{master.currency}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
